--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
-  text-align: center;
+  text-align: justify;
+  background-color: salmon;
 }
 
 .App-logo {
@@ -12,6 +13,10 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+html {
+  scroll-behavior: smooth;
+}
+
 
 .App-header {
   background-color: #282c34;
