--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -6,6 +6,15 @@
   position: relative;
   padding: 20px;
 }
+.summary {
+  color: #000;
+  font-size: 16px;
+  line-height: 1.6;
+  text-align: justify;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+
 
 /* Border "neon berjalan" */
 .profile-card::before {
