--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -45,14 +45,14 @@
   }
 }
 
-// Animasi
+//Animasi
 @keyframes twinkle {
   0%, 100% { opacity: 0.2; }
-  50% { opacity: 1; }
+  50% { opacity: 10; }
 }
 
-@keyframes lightningFlash {
-  0%, 97%, 100% { opacity: 0; }
-  98% { opacity: 1; }
-  99% { opacity: 0.4; }
-}
+// @keyframes lightningFlash {
+//   0%, 97%, 100% { opacity: 0; }
+//   98% { opacity: 1; }
+//   99% { opacity: 0.4; }
+// }
