--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -6,53 +6,52 @@
   // Background gradient
   background: linear-gradient(90deg, #0d0d0d, #1a1a40, #0d0d0d);
   color: white;
-
+}
   // Layer bintang
-  .stars {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    z-index: 1;
+//   .stars {
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     overflow: hidden;
+//     z-index: 1;
 
-    .star {
-      position: absolute;
-      width: 2px;
-      height: 2px;
-      background: white;
-      border-radius: 50%;
-      animation: twinkle 1s infinite ease-in-out;
+//     .star {
+//       position: absolute;
+//       width: 2px;
+//       height: 2px;
+//       background: white;
+//       border-radius: 50%;
+//       animation: twinkle 1s infinite ease-in-out;
 
-      @for $i from 1 through 20 {
-        &:nth-child(#{$i}) {
-          top: random(100) * 1%;
-          left: random(100) * 1%;
-          animation-delay: random(5) * 1s;
-        }
-      }
-    }
-  }
-
-
+//       @for $i from 1 through 20 {
+//         &:nth-child(#{$i}) {
+//           top: random(100) * 1%;
+//           left: random(100) * 1%;
+//           animation-delay: random(5) * 1s;
+//         }
+//       }
+//     }
+//   }
 
 
-  // Navbar content tetap di atas
-  .container {
-    position: relative;
-    z-index: 5;
-  }
-}
 
-//Animasi
-@keyframes twinkle {
-  0%, 100% { opacity: 0.2; }
-  50% { opacity: 10; }
-}
+
+//   // Navbar content tetap di atas
+//   .container {
+//     position: relative;
+//     z-index: 5;
+//   }
+// }
+
+// //Animasi
+// @keyframes twinkle {
+//   0%, 100% { opacity: 0.2; }
+//   50% { opacity: 10; }
+// }
 
 // @keyframes lightningFlash {
 //   0%, 97%, 100% { opacity: 0; }
 //   98% { opacity: 1; }
-//   99% { opacity: 0.4; }
-// }
+//   99% { opacity: 0.4; }// }
